--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = py38
-skipsdist = True
+; skipsdist = True don't need this, it is needed if you want to build dists
 
 [testenv]
 deps = -rrequirements.txt
